# FIFA_Nexus_AI

./: .env.example  .eslintrc.json  .gitignore  .vercelignore  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: ci.yml
docs/: api-overview.md
public/: index.html
scripts/: generate-python-contracts.ts  seed-database.sql
services/crowd-management/: .eslintrc.json  Dockerfile  package-lock.json  package.json
services/crowd-management/src/: index.ts
services/fan-assistance/: Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
services/fan-assistance/src/: index.ts
services/tournament-ops/: Dockerfile  package.json
services/tournament-ops/src/: index.ts
services/wayfinding/: Dockerfile  pyproject.toml  requirements.txt
services/wayfinding/app/: config.py  main.py
services/wayfinding/app/adapters/: __init__.py
services/wayfinding/app/adapters/inbound/: __init__.py  routes.py
services/wayfinding/app/adapters/outbound/: __init__.py  cache.py  database.py
services/wayfinding/app/core/: __init__.py  pathfinding.py
services/wayfinding/app/domain/: __init__.py  entities.py  models.py  services.py
services/wayfinding/app/middleware/: auth.py  rate_limit.py  validation.py
services/wayfinding/app/ports/: __init__.py  inbound.py  outbound.py
services/wayfinding/tests/: conftest.py
services/wayfinding/tests/e2e/: test_routes.py
services/wayfinding/tests/unit/: test_models.py  test_pathfinding.py  test_services.py
shared/contracts/: __init__.py  package-lock.json  package.json
(+70 files in other folders)
